fix circle overflow

--- a/src/assets/scss/components/chart-info/chart.scss
+++ b/src/assets/scss/components/chart-info/chart.scss
@@ -1,6 +1,13 @@
 .circle {
   padding: min(50%);
-  max-height: 100%;
+  max-height: calc(90vh - 80px);
+
+  &__container {
+    max-width: calc(90vh - 80px);
+    max-height: calc(90vh - 80px);
+    width: calc(90vh - 80px);
+    height: calc(90vh - 80px);
+  }
 
   &__outer {
     position: absolute;
